[project]
name = "sleep_module"
version = "1.0.0"
description = "A simple example module that implements a sleep(t) function"
authors = [{name = "Ryan D. Lewis", email="ryan.lewis@anl.gov"}]
dependencies = [
    "fastapi>=0.103",
    "uvicorn>=0.14.0",
    "ad_sdl.wei",
]
requires-python = ">=3.8.1"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
homepage = "https://github.com/AD-SDL/sleep_module"
